--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="https://www.freefavicon.com/freefavicons/icons/wood-icon-152-20280.png">
-    <meta name="description" content="Firelighters, Kiln dried logs, kiln dried kindling, dumpybags, firewood, barrowBags, seasoned logs and Firelighters, sustainably sourced in Southwest countys of Bristol, Taunton, Bath and Bridgewater. Locally sourced and reasonably priced.">
-    <meta name="keywords" content="Firewood,Wood,Logs,Kiln,Southwest,Bristol,Somerset,Bridgewater,Taunton">
+    <meta name="description" content="Firelighters, Season dried logs, kiln dried kindling, dumpybags, firewood, barrow bags, seasoned logs and Firelighters, sustainably sourced in Southwest countys of Bristol, Taunton, Bath and Bridgewater. Locally sourced and reasonably priced.">
+    <meta name="keywords" content="Firewood,Wood,Logs,Kiln,Southwest,Bristol,Bath,Somerset,Bridgewater,Taunton">
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -15,7 +15,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Southwest Logs - Quality Kiln Firewood</title>
+    <title>JP Countryside Services  - Quality Firewood</title>
   </head>
   <body>
     <div id="root"></div>
